ci: Saludo con h1

--- a/web/web1/index.html
+++ b/web/web1/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
-    <title: new titles>
+    <title> Modify in github</title>
   </head>
   <body>
+    <h1>Holiwis prros</h1>
   </body>
 
 </html>
