ci: Se argega una buena idea

--- a/web/web1/index.html
+++ b/web/web1/index.html
@@ -3,7 +3,7 @@
     <title> Modify in github</title>
   </head>
   <body>
-    <h1>Holiwis prros</h1>
+    <h1>Holiwis prros, 'amonos a pistear</h1>
   </body>
 
 </html>
